# Judger

./: CMakeLists.txt  README.md
bindings/Python/: setup.py
demo/: demo.py
src/rules/: c_cpp.c
tests/Python_and_core/: test.py
tests/Python_and_core/testcase/integration/: test.py
tests/Python_and_core/testcase/seccomp/: test.py
